fixed gc visibility bugs

--- a/src/components/Popups/ActivateGiftCard/index.scss
+++ b/src/components/Popups/ActivateGiftCard/index.scss
@@ -11,7 +11,8 @@
 padding: 0px 0px 50px 0px !important;
 
     .boxWrp{
-        max-height: 450px;
+        // max-height: 450px;
+        max-height: 410px;
         overflow: auto;
         padding: 0 35px;
 
@@ -168,10 +169,13 @@ padding: 0px 0px 50px 0px !important;
    @include b5_10px_montserrat_charcoal();
    line-height: 16px;
    letter-spacing: 0.3px;
-   text-decoration: underline;
-   text-underline-offset: 0.3rem;
    a{
-    color: $charcoal19;
+        color: $charcoal19;
+        text-decoration: underline;
+        text-underline-offset: 3px;
+        &:hover{
+            color: $aqua;
+        }
    }
 }
 .giftcard-content{
